; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_dce_v8_0.c_dce_v8_0_crtc_cursor_move.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_dce_v8_0.c_dce_v8_0_crtc_cursor_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_crtc*, i32, i32)* @dce_v8_0_crtc_cursor_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dce_v8_0_crtc_cursor_move(%struct.drm_crtc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.drm_crtc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.drm_crtc* %0, %struct.drm_crtc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.drm_crtc*, %struct.drm_crtc** %4, align 8
  %9 = call i32 @dce_v8_0_lock_cursor(%struct.drm_crtc* %8, i32 1)
  %10 = load %struct.drm_crtc*, %struct.drm_crtc** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @dce_v8_0_cursor_move_locked(%struct.drm_crtc* %10, i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load %struct.drm_crtc*, %struct.drm_crtc** %4, align 8
  %15 = call i32 @dce_v8_0_lock_cursor(%struct.drm_crtc* %14, i32 0)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @dce_v8_0_lock_cursor(%struct.drm_crtc*, i32) #1

declare dso_local i32 @dce_v8_0_cursor_move_locked(%struct.drm_crtc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
